# Cloud_Map_Evaluation

./: README.md
.github/workflows/: cmake-single-platform.yml
README/: PALoc.svg+xml
cloud_map_evaluation/: .clang-format  CMakeLists.txt
cloud_map_evaluation/config/: config.yaml
cloud_map_evaluation/dataset/MCR_slow/: .1c023695d56d5011b31f9809d6978d93b3a8ec3.cam  .abb814271c2dbc2759c332ce65410097bbd36622.cam  eval_result.txt
cloud_map_evaluation/include/: cloud_map_eval.h  tic_toc.h
cloud_map_evaluation/scripts/: voxel_wasserstein_cdf.txt
cloud_map_evaluation/src/: cloud_map_eval.cpp  cloud_map_eval_node.cpp  map_eval.cpp  map_eval.h  map_eval_node.cpp  voxel_calculator.cpp  voxel_calculator.hpp
map_eval/: CMakeLists.txt
map_eval/config/: config.yaml  config_building_day.yaml  config_corridor.yaml  config_geode.yaml  template.yaml
map_eval/scripts/: error-visualization.py  voxel_errors.txt
map_eval/src/: map_eval.cpp  map_eval.h  map_eval_main.cpp  voxel_calculator.cpp  voxel_calculator.hpp
